FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

SET(Python_ADDITIONAL_VERSIONS 2.7)
FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
message("PYTHON: " ${PYTHONLIBS_VERSION_STRING})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../build/lib/python)
set(CMAKE_SWIG_OUTDIR ${CMAKE_SOURCE_DIR}/../build/lib/python)


SET_SOURCE_FILES_PROPERTIES(Freestyle.i PROPERTIES CPLUSPLUS ON)

SWIG_ADD_LIBRARY(Freestyle LANGUAGE python SOURCES Freestyle.i)

SWIG_LINK_LIBRARIES(Freestyle app view_map winged_edge geometry rendering scene_graph stroke image system ${PYTHON_LIBRARIES})
